--- a/app/src/main/res/drawable/ic_profile_background.xml
+++ b/app/src/main/res/drawable/ic_profile_background.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/grey"/>
-            <corners android:radius="10dp"/>
+            <solid android:color="#EECBAD"/>
+            <corners android:radius="22dp"/>
         </shape>
     </item>
 </selector>
