--- a/app/src/main/res/drawable/red_background.xml
+++ b/app/src/main/res/drawable/red_background.xml
@@ -1,8 +1,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/grey"/>
-            <corners android:radius="10dp"/>
+            <solid android:color="@color/red"/>
+            <corners android:bottomRightRadius="10dp" android:topRightRadius="10dp" />
         </shape>
     </item>
 </selector>
