--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -35,7 +35,8 @@
     <ScrollView
         android:id="@+id/srollViewCart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -133,7 +134,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
                 <TextView
-                    android:id="@+id/textView25"
+                    android:id="@+id/PhoneNumberTxt"
                     style="@style/textStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -182,7 +183,7 @@
                     android:background="#ABABAB"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView25" />
+                    app:layout_constraintTop_toBottomOf="@+id/PhoneNumberTxt" />
 
                 <TextView
                     android:id="@+id/textView29"
@@ -191,7 +192,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Total "
-                    app:layout_constraintStart_toStartOf="@+id/textView25"
+                    app:layout_constraintStart_toStartOf="@+id/PhoneNumberTxt"
                     app:layout_constraintTop_toBottomOf="@+id/view4" />
 
                 <TextView
