--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,59 +11,71 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+       android:layout_margin="16dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/filterBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginEnd="6dp"
-            android:background="@drawable/grey_background"
-            android:padding="12dp"
-            app:srcCompat="@drawable/settings" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/grey_background"
-            android:orientation="horizontal">
+            android:layout_weight="1">
 
-            <EditText
-                android:id="@+id/searchEdit"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="4dp"
-                android:layout_weight="1"
-                android:background="@color/grey"
-                android:ems="10"
-                android:hint="Search Food..."
-                android:inputType="text"
-                android:padding="8dp"
-                android:textAlignment="center"
-                android:textColor="@color/blue_grey"
-                android:textColorHint="@color/blue_grey"
-                android:textSize="16sp" />
+                android:background="@drawable/white_background"
+                android:orientation="horizontal"
+                android:elevation="5dp"
+                android:layout_margin="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+                <ImageView
+                    android:id="@+id/searchBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="8dp"
+                    android:padding="4dp"
+                    android:src="@drawable/search_icon" />
 
-            <ImageView
-                android:id="@+id/searchBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="4dp"
-                android:padding="4dp"
-                android:src="@drawable/search_icon" />
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/searchEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@color/white"
+                    android:ems="10"
+                    android:hint="Search Food..."
+                    android:inputType="text"
+                    android:padding="8dp"
+                    android:textColor="@color/blue_grey"
+                    android:textColorHint="@color/blue_grey"
+                    android:textSize="16sp" />
 
-        <ImageView
-            android:id="@+id/cartBtn"
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginStart="6dp"
-            android:background="@drawable/grey_background"
-            android:padding="12dp"
-            app:srcCompat="@drawable/basket" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/filterBtn"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_margin="5dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/red_background_2"
+                android:elevation="5dp"
+                android:padding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/settings"
+                app:tint ="@color/white"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
     <ScrollView
@@ -80,8 +92,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_marginTop="8dp"
+                android:layout_weight="1"
                 android:minHeight="120dp">
 
                 <androidx.viewpager2.widget.ViewPager2
@@ -114,6 +126,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ViewPager2" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
