--- a/app/src/main/res/drawable/bg_search.xml
+++ b/app/src/main/res/drawable/bg_search.xml
@@ -3,6 +3,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
             <stroke android:width="2dp" android:color="@color/red"/>
+            <solid android:color="@color/white"/>
         </shape>
     </item>
 </selector>
